--- a/templates/match/create.html.twig
+++ b/templates/match/create.html.twig
@@ -18,6 +18,9 @@
                 <section class="equipe">
                     <label>Equipe GGHB</label>
                     {{ form_widget(form.equipe_locale, {'attr': {'placeholder': 'équipe local'}}) }}
+                    <!--
+                    faire un datalist input avec les meme id que symfony aurais fait
+                    -->
                 </section>
                 <h2 class="contre">Contre</h2>
                 <section class="equipe">
