--- a/public/css/header.css
+++ b/public/css/header.css
@@ -2,7 +2,7 @@
 ul {
     padding-left: 0;
 }
-.burger{
+#menuToggle{
     display: none;
 }
 
@@ -206,206 +206,146 @@ header>img
 
 }
 
-@media screen and (max-width: 725px){
+@media screen and (max-width: 726px){
     .header{
         display: inherit !important;
     }
 
-    .logo{
-        display:none
-    }
 
 
 
-
-
-    /*==============================================================================
-     General Styles
-    ==============================================================================*/
-
-    html,
-    body {
-        width: 100%;
-        height: 100%;
-        overflow-x: hidden;
-        margin-top: 0;
-        margin-bottom: 0;
-    }
-
-    /*--------------------------------------
-     Animation Magic, animations won't occur
-     on IE9 and before and Opera Mini
-    --------------------------------------*/
-    *,
-    *:before,
-    *:after {
-        -webkit-transition: all 0.3s;
-        transition: all 0.3s;
-        box-sizing: border-box;
-    }
-
-    /*==============================================================================
-     The burger icon with it's animation. Uses the checked property of a checkbox
-     in order to make the animation happen as well as control the next elements
-     I've used classes because of the + css selector, which will only ever animate
-     the next label element. Does not work on IE8 or below and opera mini since
-     they don't support the :checked selector.
-    ==============================================================================*/
-    .burger-check {
-        display: none;
-    }
-
-    /*--------------------------------------
-     Sets the actionable area for the burger
-     including a label for usability
-    --------------------------------------*/
-    .burger {
+    #menuToggle
+    {
+        display: block;
         position: relative;
-        float: left;
-        width: 60px;
-        height: 60px;
-        cursor: pointer;
-        margin-left:auto;
-        margin-rigth:auto;
+        top: 50px;
+        left: 50px;
+
+        z-index: 1;
+
+        -webkit-user-select: none;
+        user-select: none;
     }
 
-    .burger:after {
-        content: 'Où aller';
-        position: absolute;
-        bottom: 7px;
-        left: 0px;
-        width: 100%;
-        text-align: center;
-        font-size: 13px;
+    #menuToggle li
+    {
+        text-decoration: none;
+        color: #232323;
+
+        transition: color 0.3s ease;
     }
 
-    /*--------------------------------------
-     Creates the look of the burger icon
-     using the inner span and pseudo-elements
-    --------------------------------------*/
-    .burger span,
-    .burger span:before,
-    .burger span:after {
-        position: absolute;
-        left: 10px;
-        top: 22px;
+
+    #menuToggle input
+    {
+        display: block;
         width: 40px;
+        height: 32px;
+        position: absolute;
+        top: -7px;
+        left: -5px;
+        cursor: pointer;
+
+        opacity: 0; /* hide this */
+        z-index: 2; /* and place it over the hamburger */
+
+        -webkit-touch-callout: none;
+    }
+
+    #menuToggle span
+    {
+        display: block;
+        width: 33px;
         height: 4px;
-        background: #333;
-        border-radius: 0.2em;
-    }
-
-    /* Reset the left and create the pseudo-element */
-    .burger span:before,
-    .burger span:after {
-        content: '';
-        left: 0;
-    }
-
-    /* Top bar position */
-    .burger span:before {
-        top: -8px;
-    }
-
-    /* Bottom bar position */
-    .burger span:after {
-        top: 8px;
-    }
-
-    /* Get rid of more on action (IE9 or higher) */
-    .burger-check:checked + .burger:after {
-        content: '';
-    }
-    /* Get rid of the middle bar on action (IE9 or higher) */
-
-    .burger-check:checked + .burger span {
-        height: 0;
-        width: 0;
-    }
-
-    /* Moves the top and bottom bars to the middle on action (IE9 or higher) */
-    .burger-check:checked + .burger span:before,
-    .burger-check:checked + .burger span:after {
-        top: 6px;
-    }
-
-    /* Rotates the top bar on action with full browser support (IE9 or higher) */
-    .burger-check:checked + .burger span:before {
-        -webkit-transform: rotate(225deg);
-        -ms-transform: rotate(225deg);
-        transform: rotate(225deg);
-    }
-
-    /* Rotates the bottom bar on action with full browser support (IE9 or higher) */
-    .burger-check:checked + .burger span:after {
-        -webkit-transform: rotate(-225deg);
-        -ms-transform: rotate(225deg);
-        transform: rotate(-225deg);
-    }
-
-    /*==============================================================================
-     Simple reveal (IE9 or higher)
-    ==============================================================================*/
-    span.boo {
-        width: auto;
-        margin-top: 0;
-        line-height: 60px;
-        height: 0;
-        overflow: hidden;
-    }
-
-    /* Reveals Boo! (IE9 or higher) */
-    #main-nav-test:checked ~ .boo {
-        height: 50px;
-    }
-
-    /*==============================================================================
-     Simple mobile menu opening and closing (IE9 or higher)
-    ==============================================================================*/
-    .a-header {
+        margin-bottom: 5px;
         position: relative;
-        float: left;
-        width: calc(100% - 20px);
-        margin: 0;
-        min-height: 50px;
-        background: #eee;
-        overflow: hidden;
+
+        background: #cdcdcd;
+        border-radius: 3px;
+
+        z-index: 1;
+
+        transform-origin: 4px 0px;
+
+        transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
+        background 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
+        opacity 0.55s ease;
     }
 
-    .a-header ul {
-        position: relative;
-        float: left;
-        width: 100%;
-        list-style: none;
-        margin: 0;
-        padding: 0;
+    #menuToggle span:first-child
+    {
+        transform-origin: 0% 0%;
     }
 
-    .a-header ul a {
-        position: relative;
-        float: left;
-        width: 100%;
-        height: 0;
-        line-height: 50px;
-        padding: 0 15px;
-        text-decoration: none;
-        overflow: hidden;
-        color: #333;
-        text-align: left;
+    #menuToggle span:nth-last-child(2)
+    {
+        transform-origin: 0% 100%;
     }
 
-    .a-header ul a:hover,
-    .a-header ul a:active,
-    .a-header ul a:focus,
-    .a-header ul a:visited {
-        text-decoration: none;
-        background: #fff;
-        border-bottom-color: #08c;
+    /*
+     * Transform all the slices of hamburger
+     * into a crossmark.
+     */
+    #menuToggle input:checked ~ span
+    {
+        opacity: 1;
+        transform: rotate(45deg) translate(-2px, -1px);
+        background: #232323;
     }
 
-    /* Animate height of 'a' element in order to reveal the menu on check (IE9 or higher) */
-    #main-nav:checked ~ ul a {
-        height: 50px;
+    /*
+     * But let's hide the middle one.
+     */
+    #menuToggle input:checked ~ span:nth-last-child(3)
+    {
+        opacity: 0;
+        transform: rotate(0deg) scale(0.2, 0.2);
     }
+
+    /*
+     * Ohyeah and the last one should go the other direction
+     */
+    #menuToggle input:checked ~ span:nth-last-child(2)
+    {
+        transform: rotate(-45deg) translate(0, -1px);
+    }
+
+    /*
+     * Make this absolute positioned
+     * at the top left of the screen
+     */
+    #menu
+    {
+        position: absolute;
+        width: 300px;
+        margin: -100px 0 0 -50px;
+        padding: 50px;
+        padding-top: 125px;
+
+        background: #ededed;
+        list-style-type: none;
+        -webkit-font-smoothing: antialiased;
+        /* to stop flickering of text in safari */
+
+        transform-origin: 0% 0%;
+        transform: translate(-100%, 0);
+
+        transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0);
+    }
+
+    #menu li
+    {
+        padding: 10px 0;
+        font-size: 22px;
+    }
+
+    /*
+     * And let's slide it in from the left
+     */
+    #menuToggle input:checked ~ ul
+    {
+        transform: none;
+    }
+
 
 }
