--- a/templates/post/show.html.twig
+++ b/templates/post/show.html.twig
@@ -1,7 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Post n°{{ post.id}} - {{ post.author }}{% endblock %}
-
+{% block title %}Post n°{{ post.id }} - {{ post.author }}{% endblock %}
 
 {% block body %}
     <head>
@@ -15,7 +14,7 @@
             <article class="post-article">
                 {% set date = post.date |split('/') %}
                 <h1>{{ post.title }}</h1>
-                <p>{{ post.content }}</p>
+                <p>{{ post.content | nl2br }}</p>
                 <h6>{{ date[0] }} à {{ date[1] }}</h6>
             </article>
         </section>
