--- a/templates/match/index.html.twig
+++ b/templates/match/index.html.twig
@@ -35,6 +35,10 @@
                 <label for="domicile">Domicile</label>
                 <input type="checkbox" id="domicile" name="domicile">
             </article>
+            <article>
+                <label for="date">Date</label>
+                <input type="date" id="date" name="date">
+            </article>
         </aside>
 
         <section class="content">
