--- a/templates/match/index.html.twig
+++ b/templates/match/index.html.twig
@@ -34,11 +34,11 @@
             <article>
                 <label for="domicile">Domicile</label>
                 <input type="checkbox" id="domicile" name="domicile">
-            </article>
+            </article>{#
             <article>
                 <label for="date">Date</label>
                 <input type="date" id="date" name="date">
-            </article>
+            </article>#}
         </aside>
 
         <section class="content">
