--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,13 +1,21 @@
-*{
+* {
     margin: 0;
     padding: 0;
 }
 
-a, a:hover, a:visited, a:active{
+a, a:hover, a:visited, a:active {
     text-decoration: none;
 }
 
-li{
+li {
     list-style: none;
 }
 
+h1 a, h2 a, h3 a, h4 a, h5 a, h6 a {
+    color: #333333;
+    text-decoration: none;
+}
+
+h1 a:hover, h2 a:hover, h3 a:hover, h4 a:hover, h5 a:hover, h6 a:hover {
+    color: #333333;
+}
