--- a/templates/planning/index.html.twig
+++ b/templates/planning/index.html.twig
@@ -4,6 +4,16 @@
 
 {% block body %}
     {% include 'header.html.twig' %}
-    <!-- https://ej2.syncfusion.com/javascript/documentation/schedule/getting-started/  -->
+
+    <div class="e-schedule"></div>
+
+    <!-- Essential JS 2 all script -->
+    <script src="https://cdn.syncfusion.com/ej2/19.4.48/dist/ej2.min.js" type="text/javascript"></script>
+    <!-- Essential JS 2 Scheduler script -->
+    <script src="https://cdn.syncfusion.com/ej2/19.4.48/ej2-schedule/dist/ej2-schedule.min.js"></script>
+    <script src="https://cdn.syncfusion.com/ej2/19.4.48/ej2-schedule/dist/ej2-schedule.min.js"></script>
+
+
+
     {% include 'footer.html.twig' %}
 {% endblock %}
