--- a/public/css/header.css
+++ b/public/css/header.css
@@ -191,6 +191,13 @@ header>img
 }
 
 
+.a-header{
+    z-index: -55;
+}
+
+
+
+
 @media screen and (min-width: 726px) and (max-width: 1024px) {
     .logo{
         display: none;
@@ -220,56 +227,20 @@ header>img
     }
 
     .a-header{
-        display: block;
+        z-index:3;
     }
 
+
 }
 
-/*--------------------------------------
- Animation Magic, animations won't occur
- on IE9 and before and Opera Mini
---------------------------------------*/
-*,
-*:before,
-*:after {
-    -webkit-transition: all 0.3s;
-    transition: all 0.3s;
-    box-sizing: border-box;
-}
-
-.a-header{
-    position: absolute;
-}
-
-/*==============================================================================
- The burger icon with it's animation. Uses the checked property of a checkbox
- in order to make the animation happen as well as control the next elements
- I've used classes because of the + css selector, which will only ever animate
- the next label element. Does not work on IE8 or below and opera mini since
- they don't support the :checked selector.
-==============================================================================*/
-.burger-check {
-    display: none;
-}
 
 /*--------------------------------------
  Sets the actionable area for the burger
  including a label for usability
 --------------------------------------*/
-.burger {
-    position: absolute;
-    float: left;
-    width: 60px;
-    height: 60px;
-
-    cursor: pointer;
-    justify-content : center;
-    align-items:center;
-    text-align:center;
-}
 
 .burger:after {
-    content: 'Où aller';
+
     position: absolute;
     bottom: 7px;
     left: 0px;
@@ -283,6 +254,7 @@ header>img
  Creates the look of the burger icon
  using the inner span and pseudo-elements
 --------------------------------------*/
+
 .burger span,
 .burger span:before,
 .burger span:after {
@@ -294,42 +266,42 @@ header>img
     background: #333;
     border-radius: 0.2em;
 }
-
 /* Reset the left and create the pseudo-element */
+
 .burger span:before,
 .burger span:after {
     content: '';
     left: 0;
 }
-
 /* Top bar position */
+
 .burger span:before {
     top: -8px;
 }
-
 /* Bottom bar position */
+
 .burger span:after {
     top: 8px;
 }
-
 /* Get rid of more on action (IE9 or higher) */
+
 .burger-check:checked + .burger:after {
     content: '';
 }
 /* Get rid of the middle bar on action (IE9 or higher) */
-
 .burger-check:checked + .burger span {
     height: 0;
     width: 0;
 }
 
 /* Moves the top and bottom bars to the middle on action (IE9 or higher) */
+
 .burger-check:checked + .burger span:before,
 .burger-check:checked + .burger span:after {
     top: 6px;
 }
-
 /* Rotates the top bar on action with full browser support (IE9 or higher) */
+
 .burger-check:checked + .burger span:before {
     -webkit-transform: rotate(225deg);
     -ms-transform: rotate(225deg);
@@ -337,18 +309,28 @@ header>img
 }
 
 /* Rotates the bottom bar on action with full browser support (IE9 or higher) */
+
 .burger-check:checked + .burger span:after {
     -webkit-transform: rotate(-225deg);
     -ms-transform: rotate(225deg);
     transform: rotate(-225deg);
 }
 
-
-
-
 /*==============================================================================
  Simple mobile menu opening and closing (IE9 or higher)
 ==============================================================================*/
+
+.burger {
+    position: absolute;
+    float: left;
+    width: 60px;
+    height: 60px;
+
+    cursor: pointer;
+    justify-content : center;
+    align-items:center;
+    text-align:center;
+}
 .a-header {
     position: absolute;
     float: left;
@@ -400,4 +382,8 @@ header>img
     height: 50px;
     color: #FFFFFF;
     padding: 10px;
+}
+
+.burger-check {
+    display: none;
 }
