--- a/templates/header.html.twig
+++ b/templates/header.html.twig
@@ -1,20 +1,16 @@
 <head>
     <link rel="stylesheet" href="{{ asset("css/header.css") }}">
+    <link rel="stylesheet" href="{{ asset("css/homePage.css") }}">
     <script src="{{ asset('js/navbar.js') }}"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-            <!-- Essential JS 2 Scheduler's dependent material theme -->
-        <link href="https://cdn.syncfusion.com/ej2/19.4.48/ej2-base/styles/material.css" rel="stylesheet" type="text/css"/>
-        <link href="https://cdn.syncfusion.com/ej2/19.4.48/ej2-buttons/styles/material.css" rel="stylesheet" type="text/css"/>
-        <link href="https://cdn.syncfusion.com/ej2/19.4.48/ej2-calendars/styles/material.css" rel="stylesheet" type="text/css"/>
-        <link href="https://cdn.syncfusion.com/ej2/19.4.48/ej2-dropdowns/styles/material.css" rel="stylesheet" type="text/css"/>
-        <link href="https://cdn.syncfusion.com/ej2/19.4.48/ej2-inputs/styles/material.css" rel="stylesheet" type="text/css"/>
-        <link href="https://cdn.syncfusion.com/ej2/19.4.48/ej2-splitbuttons/styles/material.css" rel="stylesheet" type="text/css"/>
-        <link href="https://cdn.syncfusion.com/ej2/19.4.48/ej2-lists/styles/material.css" rel="stylesheet" type="text/css"/>
-        <link href="https://cdn.syncfusion.com/ej2/19.4.48/ej2-popups/styles/material.css" rel="stylesheet" type="text/css"/>
-        <link href="https://cdn.syncfusion.com/ej2/19.4.48/ej2-navigations/styles/material.css" rel="stylesheet" type="text/css"/>
-        <!-- Essential JS 2 Scheduler's material theme -->
-        <link href="https://cdn.syncfusion.com/ej2/19.4.48/ej2-schedule/styles/material.css" rel="stylesheet" type="text/css"/>
-
+    <link href="//cdn.syncfusion.com/ej2/20.4.48/ej2-base/styles/material.css" rel="stylesheet">
+    <link href="//cdn.syncfusion.com/ej2/20.4.48/ej2-buttons/styles/material.css" rel="stylesheet">
+    <link href="//cdn.syncfusion.com/ej2/20.4.48/ej2-calendars/styles/material.css" rel="stylesheet">
+    <link href="//cdn.syncfusion.com/ej2/20.4.48/ej2-dropdowns/styles/material.css" rel="stylesheet">
+    <link href="//cdn.syncfusion.com/ej2/20.4.48/ej2-inputs/styles/material.css" rel="stylesheet">
+    <link href="//cdn.syncfusion.com/ej2/20.4.48/ej2-navigations/styles/material.css" rel="stylesheet">
+    <link href="//cdn.syncfusion.com/ej2/20.4.48/ej2-popups/styles/material.css" rel="stylesheet">
+    <link href="//cdn.syncfusion.com/ej2/20.4.48/ej2-schedule/styles/material.css" rel="stylesheet">
 </head>
 {% block header %}
     <header>
